# blog-fastapi

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.cfg  structure.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 005be9342ce0_initial_migration.py  118394f319a1_create_comment_table.py  4c12cc7046ed_create_publication_table.py  d590b1c01650_add_role_table_and_role_id_to_users.py
app/: database.py  main.py
app/controllers/: comment.py  publication.py  role.py  user.py
app/helpers/: auth.py
app/models/: __init__.py  comment.py  publication.py  role.py  user.py
app/routers/: comment.py  publication.py  role.py  user.py
app/schemas/: comment.py  publication.py  role.py  user.py
seeds/: roles.py  users.py
tests/: conftest.py
tests/user/: test_controller.py  test_routes.py
