[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ja-camus <jose.camus@usach.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.3"
flake8 = "^7.0.0"
black = "^24.4.2"
pytest = "^8.2.2"
httpx = "^0.27.0"
poetry-plugin-dotenv = "^2.1.6"
pytest-cov = "^5.0.0"
coverage = "^7.5.3"
faker = "^25.8.0"
ipdb = "^0.13.13"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
httpx = "^0.27.0"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
/(
    \.env$
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | env
    | venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
